force-app/main/default/objects/Lead/fields/Market_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Market_of_Interest__c</fullName>
    <label>Market of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - See Notes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>