force-app/main/default/objects/Lead/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Denture Focused</fullName>
            </value>
            <value>
                <fullName>Fixed Arch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>