force-app/main/default/objects/Lead/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <label>Marketing</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>