force-app/main/default/objects/Lead/fields/Missing_Status__c.field-meta.xml
<CustomField>
    <fullName>Missing_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecate after using</description>
    <label>Missing Status</label>
    <type>Checkbox</type>
</CustomField>