force-app/main/default/objects/Lead/fields/NDA_DateTime__c.field-meta.xml
<CustomField>
    <fullName>NDA_DateTime__c</fullName>
    <label>NDA DateTime</label>
    <type>DateTime</type>
</CustomField>