force-app/main/default/objects/Lead/fields/NDA_Status__c.field-meta.xml
<CustomField>
    <fullName>NDA_Status__c</fullName>
    <label>NDA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>