force-app/main/default/objects/Lead/fields/Nearest_AD_I__c.field-meta.xml
<CustomField>
    <fullName>Nearest_AD_I__c</fullName>
    <inlineHelpText>Nearest 5 Affordable Dentures &amp; Implants practices in a 30 mile radius.</inlineHelpText>
    <label>Nearest AD&amp;I</label>
    <type>TextArea</type>
</CustomField>