force-app/main/default/objects/Lead/fields/New_Region__c.field-meta.xml
<CustomField>
    <fullName>New_Region__c</fullName>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>