force-app/main/default/objects/Lead/fields/No_Of_Dental_Assistants__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Dental_Assistants__c</fullName>
    <label>No. Of Dental Assistants</label>
    <length>5</length>
    <type>Text</type>
</CustomField>