force-app/main/default/objects/Lead/fields/No_Of_Doctors_Dentists__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Doctors_Dentists__c</fullName>
    <label>No. Of Doctors/Dentists</label>
    <length>5</length>
    <type>Text</type>
</CustomField>