force-app/main/default/objects/Lead/fields/No_Of_Hygienists__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Hygienists__c</fullName>
    <label>No. Of Hygienists</label>
    <length>5</length>
    <type>Text</type>
</CustomField>