force-app/main/default/objects/Lead/fields/No_Of_Lab_Techs__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Lab_Techs__c</fullName>
    <label>No. Of Lab Techs</label>
    <length>5</length>
    <type>Text</type>
</CustomField>