force-app/main/default/objects/Lead/fields/No_Of_Office_Managers__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Office_Managers__c</fullName>
    <label>No. Of Office Managers</label>
    <length>5</length>
    <type>Text</type>
</CustomField>