force-app/main/default/objects/Lead/fields/No_Of_Other_Staff__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Other_Staff__c</fullName>
    <label>No. Of Other Staff</label>
    <length>5</length>
    <type>Text</type>
</CustomField>