force-app/main/default/objects/Lead/fields/No_Of_Treatment_Coordinators__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Treatment_Coordinators__c</fullName>
    <label>No. Of Treatment Coordinators</label>
    <length>5</length>
    <type>Text</type>
</CustomField>