force-app/main/default/objects/Lead/fields/Notes_MoI__c.field-meta.xml
<CustomField>
    <fullName>Notes_MoI__c</fullName>
    <inlineHelpText>Market of Interest Notes</inlineHelpText>
    <label>Notes (MoI)</label>
    <type>TextArea</type>
</CustomField>