force-app/main/default/objects/Lead/fields/Number_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities__c</fullName>
    <label>Total Activities From Initial Discussion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>