force-app/main/default/objects/Lead/fields/On_site_Lab_Capability__c.field-meta.xml
<CustomField>
    <fullName>On_site_Lab_Capability__c</fullName>
    <label>On-site Lab/Capability</label>
    <length>10</length>
    <type>Text</type>
</CustomField>