force-app/main/default/objects/Lead/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>