force-app/main/default/objects/Lead/fields/Patient_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Patient_Referrals__c</fullName>
    <label>Patient Referrals</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>