force-app/main/default/objects/Lead/fields/Personal_Address__c.field-meta.xml
<CustomField>
    <fullName>Personal_Address__c</fullName>
    <description>The address of the person, not the company</description>
    <inlineHelpText>The address of the person, not the company</inlineHelpText>
    <label>Personal Address</label>
    <type>TextArea</type>
</CustomField>