force-app/main/default/objects/Lead/fields/Practice_1_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Practice_1_Ownership__c</fullName>
    <label>Practice #1 Ownership %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>