force-app/main/default/objects/Lead/fields/Practice_Location__c.field-meta.xml
<CustomField>
    <fullName>Practice_Location__c</fullName>
    <label>Practice Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>