force-app/main/default/objects/Lead/fields/Practice_Owner_3__c.field-meta.xml
<CustomField>
    <fullName>Practice_Owner_3__c</fullName>
    <label>Practice Owner #3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>