force-app/main/default/objects/Lead/fields/Practice_Type__c.field-meta.xml
<CustomField>
    <fullName>Practice_Type__c</fullName>
    <label>Practice Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implant</fullName>
            </value>
            <value>
                <fullName>Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Periodontal</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>