force-app/main/default/objects/Lead/fields/Practice_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Practice_Type_Other__c</fullName>
    <label>Practice Type - Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>