force-app/main/default/objects/Lead/fields/Professional_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Professional_Referrals__c</fullName>
    <label>Professional Referrals</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>