force-app/main/default/objects/Lead/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready to Sell</fullName>
            </value>
            <value>
                <fullName>Not Enough Implants</fullName>
            </value>
            <value>
                <fullName>Took Another Offer</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>