force-app/main/default/objects/Lead/fields/Record_Type_id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_id__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Id</label>
    <type>Text</type>
</CustomField>