force-app/main/default/objects/Lead/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Party</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Responsible Party)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>