force-app/main/default/objects/Lead/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Botox</fullName>
            </value>
            <value>
                <fullName>Bridges</fullName>
            </value>
            <value>
                <fullName>Cosmetic</fullName>
            </value>
            <value>
                <fullName>Crowns</fullName>
            </value>
            <value>
                <fullName>Dedation</fullName>
            </value>
            <value>
                <fullName>Dentures</fullName>
            </value>
            <value>
                <fullName>Endo</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Implants</fullName>
            </value>
            <value>
                <fullName>Implants (All)</fullName>
            </value>
            <value>
                <fullName>Invisalign</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Lab (Onsite)</fullName>
            </value>
            <value>
                <fullName>Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Orthodontics</fullName>
            </value>
            <value>
                <fullName>Perio</fullName>
            </value>
            <value>
                <fullName>Restorative</fullName>
            </value>
            <value>
                <fullName>Root Canals</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Whitening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>