force-app/main/default/objects/Lead/fields/Subject_webtolead__c.field-meta.xml
<CustomField>
    <fullName>Subject_webtolead__c</fullName>
    <inlineHelpText>Web-to-lead captured subject line</inlineHelpText>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>