force-app/main/default/objects/Lead/fields/Target_Description__c.field-meta.xml
<CustomField>
    <fullName>Target_Description__c</fullName>
    <label>Target Description</label>
    <type>TextArea</type>
</CustomField>