force-app/main/default/objects/Lead/fields/TF_Json__c.field-meta.xml
<CustomField>
    <fullName>TF_Json__c</fullName>
    <label>TF Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>