force-app/main/default/objects/Lead/fields/Total_Activities_All_Stages__c.field-meta.xml
<CustomField>
    <fullName>Total_Activities_All_Stages__c</fullName>
    <label>Total Activities All Stages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>