force-app/main/default/objects/Lead/fields/TownHall__c.field-meta.xml
<CustomField>
    <fullName>TownHall__c</fullName>
    <label>TownHall</label>
    <length>10</length>
    <type>Text</type>
</CustomField>