force-app/main/default/objects/Lead/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <type>TextArea</type>
</CustomField>