force-app/main/default/objects/Lead/recordTypes/Affiliations.recordType-meta.xml
<RecordType>
    <fullName>Affiliations</fullName>
    <active>true</active>
    <businessProcess>Affiliations Lead Process</businessProcess>
    <description>Affiliations Team Contacts: Brokers, Sellers, Advisors, Accountants, Legal</description>
    <label>Affiliations</label>
</RecordType>