force-app/main/default/objects/Lead/recordTypes/Facebook.recordType-meta.xml
<RecordType>
    <fullName>Facebook</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>Facebook</label>
</RecordType>