force-app/main/default/objects/Lead/recordTypes/Facebook_Messaging.recordType-meta.xml
<RecordType>
    <fullName>Facebook_Messaging</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>Facebook Messaging</label>
</RecordType>