force-app/main/default/objects/Lead/recordTypes/Practice_Employee.recordType-meta.xml
<RecordType>
    <fullName>Practice_Employee</fullName>
    <active>true</active>
    <businessProcess>Affiliations Lead Process</businessProcess>
    <description>Practice Employee Contacts: PO, Dentists, FDAs, Lab Managers, Purchasers, Treatment Coordinators, Office Managers, etc.</description>
    <label>Practice Employee</label>
</RecordType>