force-app/main/default/objects/Lead/recordTypes/System_Admin.recordType-meta.xml
<RecordType>
    <fullName>System_Admin</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>System Admin</label>
</RecordType>