force-app/main/default/objects/Lead/recordTypes/Treatment_Finder.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Finder</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <label>Treatment Finder</label>
</RecordType>