force-app/main/default/objects/Lead/validationRules/Lead_Waiting_for_NDA.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Waiting_for_NDA</fullName>
    <active>true</active>
    <description>Waiting for NDA required fields: Last, First, Suffix, Company, Street, City, Zip</description>
    <errorConditionFormula>ISCHANGED( Status ) &amp;&amp;
TEXT(Status) == &apos;Waiting for NDA&apos; &amp;&amp;
(ISBLANK(LastName) ||
ISBLANK(FirstName) ||
ISBLANK( Street ) ||
ISBLANK (State) ||
ISBLANK ( PostalCode))</errorConditionFormula>
    <errorMessage>The following fields are required to request an NDA:
Last Name, First Name, Suffix, and Address (Street, State, and Zip)</errorMessage>
</ValidationRule>