force-app/main/default/objects/Lead/listViews/Affiliations_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Affiliations_Leads_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>New_Region__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Affiliations,Lead.Practice_Employee</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New Lead,New_Lead,Waiting for Response,Initial Discussion,On Hold,Waiting for NDA</value>
    </filters>
    <label>All Open Leads</label>
    <sharedTo>
        <group>Affiliations_Team</group>
        <group>Biz_Dev</group>
        <group>Biz_Dev_VP</group>
        <group>Deals_Team</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>