force-app/main/default/objects/Lead/listViews/All_Leads_West.listView-meta.xml
<ListView>
    <fullName>All_Leads_West</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Score__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Affiliations,Lead.Practice_Employee</value>
    </filters>
    <filters>
        <field>New_Region__c</field>
        <operation>equals</operation>
        <value>West</value>
    </filters>
    <label>All Leads West</label>
    <sharedTo>
        <group>Biz_Dev_VP</group>
    </sharedTo>
</ListView>