force-app/main/default/objects/Lead/listViews/Facebook_Leads.listView-meta.xml
<ListView>
    <fullName>Facebook_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>FB_Form_Id__c</columns>
    <columns>FB_Practice_Id__c</columns>
    <columns>FB_Practice__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FB_Notify_Practice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Facebook</value>
    </filters>
    <label>Facebook Leads</label>
    <sharedTo>
        <group>Info_Tech</group>
        <group>Marketing</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>