force-app/main/default/objects/Lead/listViews/Facebook_Leads_Scheduled_Today.listView-meta.xml
<ListView>
    <fullName>Facebook_Leads_Scheduled_Today</fullName>
    <booleanFilter>1 AND ( 2 or 3 or 4)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>FB_Form_Id__c</columns>
    <columns>FB_Practice_Id__c</columns>
    <columns>FB_Message_Id__c</columns>
    <columns>FB_Practice__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FB_Notify_Practice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Facebook</value>
    </filters>
    <filters>
        <field>FB_Scheduled_1__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>FB_Scheduled_2__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>FB_Scheduled_3__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Facebook Leads - Scheduled Today</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>