force-app/main/default/objects/Lead/listViews/Facebook_Messenger.listView-meta.xml
<ListView>
    <fullName>Facebook_Messenger</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Adibot_Total_ScoreColor__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Facebook_Messaging</value>
    </filters>
    <label>Facebook Messenger</label>
    <sharedTo>
        <group>Marketing</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>