force-app/main/default/objects/Lead/listViews/Leads_On_Hold.listView-meta.xml
<ListView>
    <fullName>Leads_On_Hold</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Reason__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Affiliations,Lead.Practice_Employee</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>Leads - On Hold</label>
    <sharedTo>
        <group>Affiliations_Team</group>
    </sharedTo>
</ListView>