force-app/main/default/objects/Lead/listViews/Leads_Treatment_Finder.listView-meta.xml
<ListView>
    <fullName>Leads_Treatment_Finder</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Treatment_Finder</value>
    </filters>
    <label>Leads - Treatment Finder</label>
    <sharedTo>
        <group>Marketing</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>